Bug 1940620 - Make `HTMLEditor::HandleInsertText` try to insert a padding `<br>` if it replaces composition string with empty string r=m_kato

`HTMLEditor::HandleInsertText` handles empty text insertion only when it comes
from an `eCompositionChange` event.  Then, it replaces existing composition
string with empty string, i.e., delete the composition string.  Therefore, if
the previous character is a collapsible white-space, it will be invisible
if the composition string is the last content before the following block
boundary unless there is a padding `<br>`.

Differential Revision: https://phabricator.services.mozilla.com/D233613